Expose 443, run httpd with -D FOREGROUND, add configs on workers

--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -30,6 +30,44 @@
 #
 ServerRoot "/etc/httpd"
 
+<IfModule prefork.c>
+#StartServers 1
+#MinSpareServers 1
+#MaxSpareServers 5
+#ServerLimit 32
+#MaxRequestWorkers 1024
+#MaxRequestsPerChild 0
+#ListenBacklog 100
+  StartServers        8
+  MinSpareServers     5
+  MaxSpareServers     20
+  ServerLimit         75
+  MaxClients          75
+  MaxRequestsPerChild 4000
+</IfModule>
+
+# worker MPM
+# StartServers: initial number of server processes to start
+# MaxClients: maximum number of simultaneous client connections
+# MinSpareThreads: minimum number of worker threads which are kept spare
+# MaxSpareThreads: maximum number of worker threads which are kept spare
+# ThreadsPerChild: constant number of worker threads in each server process
+# MaxRequestsPerChild: maximum number of requests a server process serves
+<IfModule worker.c>
+#StartServers 2
+#MaxRequestWorkers 1024
+#MinSpareThreads 25
+#MaxSpareThreads 75
+#ThreadsPerChild 25
+#MaxRequestsPerChild 0
+  StartServers        8
+  MinSpareServers     5
+  MaxSpareServers     20
+  ServerLimit         75
+  MaxClients          75
+  MaxRequestsPerChild 4000
+</IfModule>
+
 #
 # Listen: Allows you to bind Apache to specific IP addresses and/or
 # ports, instead of the default. See also the <VirtualHost>
