--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,7 +12,7 @@ minprocs=200
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [program:httpd]
-command=/usr/sbin/httpd
+command=/usr/sbin/httpd -D FOREGROUND
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
